# ExpansionGameEngine

./: .gitignore  CMakeLists.txt  Expansion-Game-Engine.sln  GenerateProject.bat  LICENSE  PackEngine.bat  README.md
BulldozerFileManager/: BD_ActorRW.cpp  BD_ActorRW.h  BD_GenericBinRW.cpp  BD_GenericBinRW.h  BD_GenericBinWriter.cpp  BD_Import.cpp  BD_Import.h  BD_MatRW.cpp  BD_MatRW.h  BD_Reader.cpp  BD_Reader.h  BD_StructMan.h  BD_Writer.cpp  BD_Writer.h  BulldozerFileManager.cpp  BulldozerFileManager.h  BulldozerFileManager.vcxproj  BulldozerFileManager.vcxproj.filters  CMakeLists.txt  pch.h
Game/: CMakeLists.txt  Donut.cpp  Donut.h  Game.vcxproj  Game.vcxproj.filters  Map1.cpp  Map1.h  demoMap.cpp  demoMap.h
PhysicaSound/: CMakeLists.txt  PS_Emitter.cpp  PS_Emitter.h  PS_Listener.cpp  PS_Listener.h  PS_SoundVolume.cpp  PS_SoundVolume.h  PhysicaSound.cpp  PhysicaSound.h  PhysicaSound.vcxproj  PhysicaSound.vcxproj.filters
RaindropRenderer/: CMakeLists.txt  RD_API.cpp  RD_API.h  RD_Buffer.cpp  RD_Buffer.h  RD_Callback.cpp  RD_Callback.h  RD_Camera.cpp  RD_Camera.h  RD_DirLight.cpp  RD_DirLight.h  RD_Error.cpp  RD_Error.h  RD_FrameBuffer.h  RD_FrameLimiter.cpp  RD_FrameLimiter.h  RD_GUI.cpp  RD_GUI.h  RD_ImageFormat.cpp  RD_ImageFormat.h  RD_MaterialLibrary.cpp  RD_Materials.cpp  RD_Materials.h  RD_Mesh.cpp  RD_Mesh.h  RD_Pipeline.cpp  RD_Pipeline.h  RD_PointLight.cpp  RD_PointLight.h  RD_Quad.cpp  RD_RenderPass.cpp  RD_RenderPass.h  RD_RenderingPipeline.cpp  RD_RenderingPipeline.h  RD_ShaderLoader.cpp  RD_ShaderLoader.h  RD_Texture.cpp  RD_Texture.h  RD_UniformBuffer.cpp  RD_UniformBuffer.h  (+13 more)
Testing/: CMakeLists.txt  CubeLight.cpp  CubeLight.h  Donut.cpp  Donut.h  GameInfo.json  MainCharacter.cpp  MainCharacter.h  Map1.cpp  Map1.h  Testing.vcxproj  Testing.vcxproj.filters  fshader.frag  imgui.ini  island.msh  leaves.msh  main.cpp  model.msh  model2.msh  platform.msh  sea.msh  sphere.msh  test.msh  trunk.msh  vshader.vert
Testing/Content/: Material.exmtl  canon.msh  cube.msh  cylinder.msh  cylinder_0.msh  epave.msh  floor.msh  floorMat.exmtl  metal.tif  metalNorm.tif  plane.exmtl  plane.msh  ref.msh  room.msh  shape.msh  terracota.tif  terracottaN.tif  terrain.msh  testactor.actor  tonneau.exmtl  wool.tif  woolN.tif
Testing/Content/Cadeau/: CadeauRuban.msh
Testing/Content/Donut/: donut.msh
Testing/Content/Maps/: demoMap.json  map1.json
Testing/Content/Tonneau/: tonneau_corps.msh
Testing/Content/epee/: epee_lame.msh  epee_manche.msh  lame.exmtl  manche.exmtl
Testing/Engine/Meshes/: Light.msh
Testing/Engine/Shaders/: GameView.frag  GameView.vert  Lights.frag  Lights.vert
src/BulldozerFileManager/: BD_AnimReader.cpp  BD_AnimReader.h  BD_AnimWriter.cpp  BD_AnimWriter.h  BD_LightDB_RW.cpp  BD_LightDB_RW.h  BD_MatRW.cpp  BD_MatRW.h  BD_Reader.cpp  BD_Reader.h  BD_SkelReader.cpp  BD_SkelReader.h  BD_SkelWriter.cpp  BD_SkelWriter.h  BD_SkeletonRW.cpp  BD_SkeletonRW.h  BD_StructMan.h  BD_Writer.cpp  BD_Writer.h  BulldozerFileManager.cpp  BulldozerFileManager.h  BulldozerFileManager.vcxproj  BulldozerFileManager.vcxproj.filters  CMakeLists.txt  ExpansionGameEngine.sln  cpp.hint  dllmain.cpp  framework.h
src/ExGame/: CMakeLists.txt  ExGame.vcxproj  ExGame.vcxproj.filters  GameInfo.json  launchLevelEditor.bat  main.cpp  test.skl  test_db.ldb
src/ExGame/Content/: cactus.msh  desert.msh  matTest.exmtl  metal.exmtl  ocean.msh  plane.msh  plane_sub.msh  rock1.msh  rock2.msh  room.msh  roomMat.exmtl  sphere.msh  terracota.exmtl  terrain_Landscape.msh  test.json  water.exmtl  wool.exmtl
src/ExpansionGameEngineCore/: CMakeLists.txt  EXP_Actor.cpp  EXP_Actor.h  EXP_Animator.cpp  EXP_Animator.h  EXP_Callbacks.cpp  EXP_Callbacks.h  EXP_Camera.cpp  EXP_Camera.h  EXP_Component.cpp  EXP_Component.h  EXP_Conf.h  EXP_DirLight.cpp  EXP_DirLight.h  EXP_DirLightActor.cpp  EXP_DirLightActor.h  EXP_GUI_Button.cpp  EXP_GUI_Button.h  EXP_GUI_ColorCache.cpp  EXP_GUI_ColorCache.h  EXP_GUI_ImageTexture.cpp  EXP_GUI_ImageTexture.h  EXP_GUI_Text.cpp  EXP_GUI_Text.h  EXP_Game.cpp  EXP_Game.h  EXP_GenericRessourceManager.h  EXP_GuiManager.cpp  EXP_GuiManager.h  EXP_HotLoad.cpp  EXP_HotLoad.h  EXP_ImGuiClass.h  EXP_InputHandler.cpp  EXP_InputHandler.h  EXP_InstanciatedMesh.cpp  EXP_InstanciatedMesh.h  EXP_KeyboardCallback.cpp  EXP_KeyboardCallback.h  EXP_Level.cpp  EXP_Level.h  (+39 more)
src/ExpansionGameEngineCore/physics/: EXP_Body.cpp  EXP_Body.h  EXP_BoxBody.cpp  EXP_BoxBody.h  EXP_BoxBodyActor.cpp  EXP_BoxBodyActor.h
src/ExpansionGameEngineCore/ui_kit/: EXP_GuiButton.cpp  EXP_GuiButton.h  EXP_GuiTextButton.cpp  EXP_GuiTextButton.h  EXP_GuiWindow.cpp  EXP_GuiWindow.h
src/Game/: CMakeLists.txt  Character.cpp  Character.h  Game.vcxproj  Game.vcxproj.filters  GameLevel.cpp  GameLevel.h  MainLevel.cpp  MainLevel.h  PhysicsCube.cpp  PhysicsCube.h  TestActor.cpp  TestActor.h  cave.cpp  cave.h  demoActor.cpp  demoActor.h  demoMap.cpp  demoMap.h  framework.h  map2.cpp  map2.h
src/PhysicaSound/: CMakeLists.txt  PS_Emitter.cpp  PS_Emitter.h  PhysicaSound.cpp  PhysicaSound.h  PhysicaSound.vcxproj  PhysicaSound.vcxproj.filters  framework.h
src/QtPluginTest/: CMakeLists.txt  main.cpp
src/RaindropRenderer/: CMakeLists.txt  RD_API.cpp  RD_API.h  RD_Buffer.cpp  RD_Buffer.h  RD_Callback.cpp  RD_Callback.h  RD_Camera.cpp  RD_Camera.h  RD_Cubemap.cpp  RD_Cubemap.h  RD_DirLight.cpp  RD_DirLight.h  RD_Error.cpp  RD_Error.h  RD_Font.cpp  RD_Font.h  RD_FontRenderer.cpp  RD_FontRenderer.h  RD_FrameBuffer.cpp  RD_FrameBuffer.h  RD_FrameLimiter.cpp  RD_FrameLimiter.h  RD_GUI_Element.cpp  RD_GUI_Element.h  RD_GUI_Manager.cpp  RD_GUI_Manager.h  RD_GenericRessourceManager.h  RD_ImageFormat.cpp  RD_ImageFormat.h  RD_InstanciatedMesh.cpp  RD_InstanciatedMesh.h  RD_Material.cpp  RD_Material.h  RD_MaterialLibrary.cpp  RD_MaterialLibrary.h  RD_Materials.cpp  RD_Materials.h  RD_Mesh.cpp  RD_Mesh.h  (+50 more)
tools/FBX2MSH/: CMakeLists.txt  main.cpp
tools/OmbrageEditor/compiler/: CMakeLists.txt  FunctionDeserializer.cpp  FunctionDeserializer.h  FunctionGraph.cpp  FunctionGraph.h  FunctionSerializer.cpp  FunctionSerializer.h  (+16 more)
(+577 files in other folders)
