add_library(OmbrageCompiler SHARED SpirvCompiler.cpp SpirvCompiler.h SpirvTypes.h SpirvFunction.h SpirvProgram.h SpirvProgram.cpp SpirvTypes.cpp SpirvFunction.cpp SpirvData.h SpirvData.cpp SpirvSpecialOP.h SpirvSpecialOP.cpp SpirvOperation.cpp FunctionGraph.cpp FunctionGraph.h FunctionSerializer.cpp FunctionSerializer.h FunctionDeserializer.cpp FunctionDeserializer.h SpirvConstant.h SpirvConstant.cpp)